# olivelabs-assignment

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  setup.sh  todo.md
backend/: Dockerfile  alembic.ini  init.sql  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  auth.py  conversation.py  nlq.py  schema.py
backend/app/core/: config.py  database.py  exceptions.py  security.py  seed_data.py
backend/app/models/: __init__.py  conversation.py
backend/app/services/: explain_builder.py  llm_client.py  nlq_parser.py  query_executor.py  safety.py  schema_registry.py  sessions.py  viz_inference.py
backend/tests/: test_nlq_parser.py
frontend/: .prettierrc  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/explainability/: ExplainDrawer.tsx
frontend/components/query/: QueryPanel.tsx
frontend/components/results/: ChartRenderer.tsx  DataTable.tsx  ResultsView.tsx
frontend/lib/: api-client.ts
frontend/store/: query-store.ts
frontend/types/: api.ts
